2010-03-30  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG Animation doesn't respect 'currentColor'
        https://bugs.webkit.org/show_bug.cgi?id=36695

        Test: svg/custom/animation-currentColor.svg

        SVG Animation can't handle currentColor at the moment. This patch catches the
        color value of the target element and replaces 'currentColor' with it's color string.

        * svg/SVGAnimationElement.cpp:
        (WebCore::adjustForCurrentColor):
        (WebCore::SVGAnimationElement::startedActiveInterval):
2010-03-30  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG Animation doesn't respect 'currentColor'
        https://bugs.webkit.org/show_bug.cgi?id=36695

        Check if SVG animation takes the color value of the target element as 'currentColor'.

        * platform/mac/svg/custom/animation-currentColor-expected.checksum: Added.
        * platform/mac/svg/custom/animation-currentColor-expected.png: Added.
        * platform/mac/svg/custom/animation-currentColor-expected.txt: Added.
        * svg/custom/animation-currentColor.svg: Added.


Canonical link: https://commits.webkit.org/48069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56775 268f45cc-cd09-0410-ab3c-d52691b4dbfc